--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,3 +63,14 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+# Account Bundle Configuration
+# These gat passed to extension.load
+# The name (cerad_account) is important.  Matches the alias in the extension class
+cerad_account:
+    xxx: yyy
+    
+#   events:
+#       on_account_created:
+#           email: true
+            
