--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,6 +6,8 @@ parameters:
     database_user:     root
     database_password: ~
 
+    database_name_accounts: accounts
+
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
     mailer_user:       ~
