Create and persist a user

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,3 +15,5 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    cerad_account_master_password: ~
