--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,8 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Cerad\Bundle\AccountBundle\Entity\AccountUser: 
+            id: cerad_account.user_encoder
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
