--- a/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
@@ -2,12 +2,7 @@ services:
   
     cerad_account.entity_manager:
         alias: doctrine.orm.accounts_entity_manager
-  
-    cerad_account.registration_listener:
-        class: Cerad\Bundle\AccountBundle\EventListener\RegistrationListener
-        tags:
-            - { name: kernel.event_subscriber }          
-  
+    
     # ===========================================================
     # Use fos naming schemes for now
     cerad_account.user_provider:
@@ -32,7 +27,75 @@ services:
             
     cerad_account.account_manager:
         alias: cerad_account.user_manager
+        
+    cerad_account.account.manager:
+        alias: cerad_account.user_manager
             
     fos_user.user_manager:
         alias: cerad_account.user_manager
+        
+    # ==========================================================
+    # My listeners
+    cerad_account.registration_listener:
+        class: Cerad\Bundle\AccountBundle\EventListener\RegistrationListener
+        tags:
+            - { name: kernel.event_subscriber }          
+    
+    # ==============================================================
+    # Lost of form types
+            
+    cerad_account.create.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\CreateFormType
+        tags:
+            - { name: form.type, alias: cerad_account_create }
+            
+    cerad_account.edit.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\EditFormType
+        tags:
+            - { name: form.type, alias: cerad_account_edit }
+    
+    cerad_account.displayname.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\DisplayNameFormType
+        tags:
+            - { name: form.type, alias: cerad_account_displayname }
+            
+    cerad_account.username.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\UsernameFormType
+        tags:
+            - { name: form.type, alias: cerad_account_username }
+            
+    cerad_account.username.unique.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\UsernameUniqueFormType
+        tags:
+            - { name: form.type, alias: cerad_account_username_unique }
+            
+    cerad_account.username.existing.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\UsernameExistingFormType
+        tags:
+            - { name: form.type, alias: cerad_account_username_existing }
+            
+    cerad_account.email.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\EmailFormType
+        tags:
+            - { name: form.type, alias: cerad_account_email }
+            
+    cerad_account.email.unique.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\EmailUniqueFormType
+        tags:
+            - { name: form.type, alias: cerad_account_email_unique }
+            
+    cerad_account.password.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\PasswordFormType
+        tags:
+            - { name: form.type, alias: cerad_account_password }
+            
+    cerad_account.password_reset.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\PasswordResetFormType
+        tags:
+            - { name: form.type, alias: cerad_account_password_reset }
+            
+    cerad_account.signin.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\SigninFormType
+        tags:
+            - { name: form.type, alias: cerad_account_signin }
    
