--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,4 +16,4 @@ parameters:
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    cerad_account_master_password: ~
+    cerad_account.master_password: ~
