--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,8 +12,11 @@ security:
         in_memory:
             memory:
                 users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                    user:  { password: userpass,  roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    
+        cerad_account_user_provider:
+            id: cerad_account.user_provider
 
     firewalls:
         dev:
