--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,14 +46,44 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+    
+# As an example
+# FOSUser Configuration
+fos_user:
+    db_driver:     orm
+    firewall_name: main
+    user_class:    Cerad\Bundle\AccountBundle\Entity\AccountUser
+    model_manager_name: accounts
+    
+    service:
+        user_manager: cerad_account.user_manager
+    
+#   from_email:
+#       address:        noreply@zayso.org
+#       sender_name:    Zayso No Reply
+    
+    registration:
+        form:
+            type:               cerad_account_registration
+        confirmation:
+            enabled:            true
+            from_email:
+                address:        admin@zayso.org
+                sender_name:    Zayso Registration
 
 # Account Bundle Configuration
 # These gat passed to extension.load
 # The name (cerad_account) is important.  Matches the alias in the extension class
 cerad_account:
-    xxx: yyy
+  
+    db_driver:     orm
+    firewall_name: main
     
-#   events:
-#       on_account_created:
-#           email: true
-            
+    user_class:            Cerad\Bundle\AccountBundle\Entity\AccountUser
+    user_identifier_class: Cerad\Bundle\AccountBundle\Entity\AccountIdentifier
+      
+    model_manager_name: accounts
+    
+    service:
+        user_manager: cerad_account.user_manager
+        
