--- a/src/Cerad/Bundle/AccountBundle/Resources/config/routing.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/routing.yml
@@ -11,14 +11,18 @@ cerad_account_home:
   path: /home
   defaults:  { _controller: CeradAccountBundle:Main:home }
   
-cerad_account_signin:
-  path: /signin
-  defaults:  { _controller: CeradAccountBundle:Main:signin }
+cerad_account_login:
+  path: /login
+  defaults:  { _controller: CeradAccountBundle:Security:login }
   
-cerad_account_signout:
-  path: /signout
-  defaults:  { _controller: CeradAccountBundle:Main:signout }
-  
+cerad_account_login_check:
+  path: /login-check
+  defaults:  { _controller: CeradAccountBundle:Security:check }  # Throws exception
+    
+cerad_account_logout:
+  path: /logout
+  defaults:  { _controller: CeradAccountBundle:Security:logout } # Throes exception
+    
 cerad_account_register:
   path: /register
   defaults:  { _controller: CeradAccountBundle:Registration:register }
