--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,4 +1,6 @@
 security:
+    hide_user_not_found: false
+    
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         Cerad\Bundle\AccountBundle\Entity\AccountUser: 
