Tried to remove FOSUserBundle but it is currently needed for User mappings.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -49,27 +49,27 @@ swiftmailer:
     
 # As an example
 # FOSUser Configuration
-fos_user:
-    db_driver:     orm
-    firewall_name: main
-    user_class:    Cerad\Bundle\AccountBundle\Entity\AccountUser
-    model_manager_name: accounts
+# fos_user:
+#     db_driver:     orm
+#     firewall_name: main
+#     user_class:    Cerad\Bundle\AccountBundle\Entity\AccountUser
+#     model_manager_name: accounts
     
-    service:
-        user_manager: cerad_account.user_manager
+#     service:
+#        user_manager: cerad_account.user_manager
     
 #   from_email:
 #       address:        noreply@zayso.org
 #       sender_name:    Zayso No Reply
     
-    registration:
-        form:
-            type:               cerad_account_registration
-        confirmation:
-            enabled:            true
-            from_email:
-                address:        admin@zayso.org
-                sender_name:    Zayso Registration
+#     registration:
+#         form:
+#            type:               cerad_account_registration
+#        confirmation:
+#            enabled:            true
+#            from_email:
+#                address:        admin@zayso.org
+#                sender_name:    Zayso Registration
 
 # Account Bundle Configuration
 # These gat passed to extension.load
