--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,7 +29,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
-    use_controller: true
+    use_controller: false
     bundles:        [ CeradAccountBundle ]
     #java: /usr/bin/java
     filters:
