removed FOSUserBundle dependency

--- a/app/config/doctrine.yml
+++ b/app/config/doctrine.yml
@@ -33,6 +33,6 @@ doctrine:
             accounts:
                connection: accounts
                mappings:
-                    FOSUserBundle: ~
+                   #FOSUserBundle: ~
                     CeradAccountBundle: ~
                        
