--- a/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
@@ -31,9 +31,6 @@ services:
     cerad_account.account.manager:
         alias: cerad_account.user_manager
             
-    fos_user.user_manager:
-        alias: cerad_account.user_manager
-        
     cerad_account.user_checker:
         class: Symfony\Component\Security\Core\User\UserChecker
         
@@ -116,4 +113,21 @@ services:
         class: Cerad\Bundle\AccountBundle\Form\Type\SigninFormType
         tags:
             - { name: form.type, alias: cerad_account_signin }
-   
+
+    # ===================================================
+    # Some FOS Services, keep the name for now
+    fos_user.user_manager:
+        alias: cerad_account.user_manager
+    
+    fos_user.util.canonicalizer.default:
+        class: FOS\UserBundle\Util\Canonicalizer
+      
+    fos_user.util.user_manipulator:
+        class: FOS\UserBundle\Util\UserManipulator
+        arguments:
+            - '@fos_user.user_manager'
+
+    fos_user.util.token_generator.default:
+        class: FOS\UserBundle\Util\TokenGenerator
+        arguments:
+            - '@logger'
