--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,8 +79,8 @@ cerad_account:
     db_driver:     orm
     firewall_name: main
     
-    user_class:            Cerad\Bundle\AccountBundle\Entity\AccountUser
-    user_class_identifier: Cerad\Bundle\AccountBundle\Entity\AccountIdentifier
+    user_class:            Cerad\Bundle\AccountBundle\Entity\User
+    user_identifier_class: Cerad\Bundle\AccountBundle\Entity\UserIdentifier
       
     model_manager_name: accounts
     
