Uppercase view directories

--- a/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
@@ -40,6 +40,9 @@ services:
             - '@security.context'
             - '@cerad_account.user_checker'
        
+    cerad_account.authentication_information:
+        class: Cerad\Bundle\AccountBundle\Security\AuthenticationInformation
+      
     # ==========================================================
     # My listeners
     cerad_account.registration_listener:
