--- a/src/Cerad/Bundle/AccountBundle/Resources/config/routing.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/routing.yml
@@ -26,4 +26,58 @@ cerad_account_logout:
 cerad_account_register:
   path: /register
   defaults:  { _controller: CeradAccountBundle:Registration:register }
+  
+# ===========================================
+# Password resetting stuff
+cerad_account_password_reset_request:
+  path: /password/reset/request
+  defaults:  { _controller: CeradAccountBundle:PasswordReset:request }
+  methods:  [GET, POST]
+  
+cerad_account_password_reset_send_email:
+  path:      /password/reset/send-email
+  defaults:  { _controller: CeradAccountBundle:PasswordReset:sendEmail }
+  methods:   [POST]
+  
+cerad_account_password_reset_check_email:
+  path:      /password/reset/check-email
+  defaults:  { _controller: CeradAccountBundle:PasswordReset:checkEmail }
+  methods:   [GET]
+
+cerad_account_password_reset_reset:
+  path:       /password/reset/reset/{token}
+  defaults:  { _controller: CeradAccountBundle:PasswordReset:reset }
+  methods:  [GET POST]
+  
+cerad_account_password_change:
+  path:      /password/change
+  defaults:  { _controller: CeradAccountBundle:PasswordChange:change }
+  methods:  [GET POST]
+
+# ===========================================
+# Password resetting stuff
+fos_user_resetting_request:
+  path: /resetting/request
+  defaults:  { _controller: CeradAccountBundle:Resetting:request }
+  methods:  [GET]
+  
+fos_user_resetting_send_email:
+  path: /resetting/send-email
+  defaults:  { _controller: CeradAccountBundle:Resetting:sendEmail }
+  methods:  [POST]
+  
+fos_user_resetting_check_email:
+  path: /resetting/check-email
+  defaults:  { _controller: CeradAccountBundle:Resetting:checkEmail }
+  methods:  [GET]
+
+fos_user_resetting_reset:
+  path: /resetting/reset/{token}
+  defaults:  { _controller: CeradAccountBundle:Resetting:reset }
+  methods:  [GET POST]
+  
+fos_user_change_password:
+  path: /change-password
+  defaults:  { _controller: CeradAccountBundle:ChangePassword:changePassword }
+  methods:  [GET POST]
 
