--- a/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
+++ b/src/Cerad/Bundle/AccountBundle/Resources/config/services.yml
@@ -116,6 +116,11 @@ services:
         class: Cerad\Bundle\AccountBundle\Form\Type\SigninFormType
         tags:
             - { name: form.type, alias: cerad_account_signin }
+            
+    cerad_account.token.form_type:
+        class: Cerad\Bundle\AccountBundle\Form\Type\TokenFormType
+        tags:
+            - { name: form.type, alias: cerad_account_token }
 
     # ===================================================
     # Some FOS Services, keep the name for now
